[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrorouter"
version = "0.1.0"
description = "A simple router for Pyrogram"
readme = "README.md"
authors = [{ name = "Lukasz Tshipenchko", email = "dev@zxc.sx" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["router", "pyrogram"]
dependencies = [
    "pyrogram",
]
requires-python = "~=3.7"

[project.optional-dependencies]
dev = ["setuptools"]

[project.urls]
Homepage = "https://github.com/tshelter/pyrorouter"

