[tool.poetry]
name = "pyrorouter"
version = "0.1.2"
description = "A simple router for Pyrogram"
authors = ["Łukasz Tshipenchko <dev@zxc.sx>"]
license = "LGPLv3"
readme = "README.md"
keywords = ["router", "pyrogram"]

[tool.poetry.dependencies]
python = "^3.7"
pyrogram = "^2.0.106"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
